# pubtransit

./: .coveragerc  .coveralls.yml  .gitignore  .project  .pydevproject  .rsync-filter  .travis.yaml  .travis.yml  Makefile  README.md  Vagrantfile  ansible.cfg  deploy.yml  feeds.yaml  feeds.yml  provision.yaml  provision.yml  requirements.txt  setup.cfg  site.yaml  tox.ini
.externalToolBuilders/: make.launch
departures/: __main__.py  app.py
departures/control/: __init__.py  api.py  control.js
departures/etc/: departures.yml  departures.yml.example
departures/model/: conf.py  model.js  model.py
departures/view/: __init__.py  departures.html  departures.js  view.html  view.js
departures_ds/: build.py  data.py
departures_feed/: feed.mk  make.py
departures_feed/tests/: test_make.py
departures_web/: __init__.py  __main__.py  main.py  model.py  view.py
departures_web/etc/: departures.yml
departures_web/html/: control.js  logging.js  model.js  presenter.js  transit.js  view.html  view.js
doc/: administrator.md  architecture.md  backend-architecture.md  frontend-architecture.md  setup.md
provision/: get_proxy_env.py  hosts
pubtransit/: __init__.py  __main__.py  feed.mk  feed.py  feed_item.mk
pubtransit/tests/: test_feed.py
transit_feed/: __main__.py  feed.mk  feed.py  feed_item.mk
transit_feed/tests/: test_feed.py
transit_www/: __main__.py  main.py  model.py  view.py  www.mk
transit_www/etc/: departures.yml
transit_www/html/: feed.js  model.js  presenter.js  transit.js  view.html  view.js
