[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
name = transit
summary = transit.org web service
description-file =
    README.md
author = Federico Ressi
author-email = federico.ressi@intel.com
home-page = https://github.com/FedericoRessi/transit
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    # Topic :: Software Development :: Testing

[files]
packages =
    transit_feed
    transit_www

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
# upload-dir = docs/build/html

[extract_messages]
# keywords = testing automation provisioning

[entry_points]
console_scripts =
    transit-feed = transit_feed.feed:main
