[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
name = pubtransit
summary = Pub Transit Web site (https://www.pubtransit.org)
description-file =
    README.md
author = Federico Ressi
author-email = federico.ressi@gmail.com
home-page = https://github.com/FedericoRessi/pubtransit
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Topic :: Utilities

[files]
packages =
    pubtransit

[extract_messages]
keywords = Pub Transit Web site

[entry_points]
console_scripts =
    pubtransit = pubtransit:main
